--- a/ProduceAlmanac/res/values/strings.xml
+++ b/ProduceAlmanac/res/values/strings.xml
@@ -6,5 +6,7 @@
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_detail">DetailActivity</string>
+    <string name="filter">Filter</string>
+    <string name="ok">OK</string>
 
 </resources>
