--- a/ProduceAlmanac/res/values/strings.xml
+++ b/ProduceAlmanac/res/values/strings.xml
@@ -11,5 +11,6 @@
     <string name="none">None</string>
     <string name="done">Done</string>
     <string name="search_hint">apple</string>
+    <string name="notification">Edit Notifications</string>
 
 </resources>
