--- a/ProduceAlmanac/res/values/strings.xml
+++ b/ProduceAlmanac/res/values/strings.xml
@@ -12,5 +12,5 @@
     <string name="done">Done</string>
     <string name="search_hint">apple</string>
     <string name="notification">Edit Notifications</string>
-
+	<string name="save">Save</string>
 </resources>
