--- a/ProduceAlmanac/res/values/strings.xml
+++ b/ProduceAlmanac/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Produce Almanac</string>
+    <string name="app_name">The Berkeley Produce Almanac</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
